tests/invalid/method_impl.err_exp
method_impl.m:025: Warning: the type class `method_impl.c'/1 and the type
method_impl.m:025:   constructor in the argument vector of this instance
method_impl.m:025:   declaration for it, namely `method_impl.foo'/0, are all
method_impl.m:025:   visible outside this module, which means that keeping this
method_impl.m:025:   instance private to this module is [38;5;203mlikely to be a mistake.[39;49m
method_impl.m:026: In clause for instance method predicate `m1'/2:
method_impl.m:026:   in argument 2 of predicate `method_impl.foo_m1'/2:
method_impl.m:026:   type error: [38;5;87mvariable `HeadVar__2'[39;49m has type
method_impl.m:026:     [38;5;203mint;[39;49m
method_impl.m:026:   expected type was
method_impl.m:026:     [38;5;40mstring.[39;49m
method_impl.m:026:   The partial type assignment was:
method_impl.m:026:     HeadVar__1_1: method_impl.foo
method_impl.m:026:     HeadVar__2_2: int
method_impl.m:028: Warning: the type class `method_impl.c'/1 and the type
method_impl.m:028:   constructor in the argument vector of this instance
method_impl.m:028:   declaration for it, namely `method_impl.bar'/0, are all
method_impl.m:028:   visible outside this module, which means that keeping this
method_impl.m:028:   instance private to this module is [38;5;203mlikely to be a mistake.[39;49m
method_impl.m:029: In clause for instance method predicate `m1'/2:
method_impl.m:029:   error: call to [38;5;203mundefined[39;49m predicate [38;5;87m`bar_m1'/2.[39;49m
